ingress-controller/Deployment-ingress.yaml
#ingress-controller is similar to loadbalancer which is application type load balancer (L7) and which is used for path-based and domain-based and route-based
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ingress
spec:
  replicas: 1
  selector:
     matchLabels:
       app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
        - name: blue-app
          image: devopswithcloudhub/nginx:blue #blue-app
          ports:
            - containerPort: 80

---
#service
apiVersion: v1 
kind: Service
metadata:
  name: deploy-ingress
spec:
  selector:
     app: blue-app
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    protocol: TCP
---
#ingress-controller
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
   name: ingress-controller
   annotations:
     kubernetes.io/ingress.class: "gce" #use "nginx" if using nginx ingress controller 
spec:
  #ingressClassName: gce (in new k8s version annotations are deprecated you can use this instead of annotations)
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/" 
        backend:
          service: 
            name: deploy-ingress #it should match name of service which is created before
            port:
              number: 80
