ingress-controller/ingress-controller.yaml
#ingress-controller
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
   name: ingress-controller
   annotations:
     kubernetes.io/ingress.class: "gce" #use "nginx" if using nginx ingress controller 
spec:
  #ingressClassName: gce (in new k8s version annotations are deprecated you can use this instead of annotations)
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/" 
        backend:
          service: 
            name: deploy-ingress #it should match name of service which is created before
            port:
              number: 80  #serviceport

---
#context-based or route-based application LB
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: context-ingresscontroller
  annotations:
    kubernetes.io/ingress.class: "gce" 
spec:
  # ingressClassName: gce
  defaultBackend:
    service:
      name: deploy-ingress-green
      port:
        number: 80 #serviceport
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: deploy-ingress-blue
            port:
              number: 80
      - pathType: Prefix
        path: "/orange"
        backend:
          service:
            name: "deploy-ingress-orange"
            port:
              number: 80

---
#host-based or domain-based application LB
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
spec:
  rules:
  - host: green.nagasaikonderu.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deploy-ingress-green #it should match service name you gave
            port:
              number: 80
  - host: blue.nagasaikonderu.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deploy-ingress-blue
            port:
              number: 80
  - host: orange.nagasaikonderu.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deploy-ingress-orange
            port:
              number: 80
  # - host: nagasaikonderu.xyz
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: deploy-new
  #           port:
  #             number: 80
